EXTRA_DIST = \
	Makefile.defs \
	elapsed.sh \
	footer.sh \
	header.sh \
	indent.sh \
	libtool.m4 \
	shtool \
	vers.sh

DISTCLEANFILES = \
	COPYING.backup \
	INSTALL.backup \
	config.guess \
	config.sub \
	install-sh \
	ltmain.sh \
	missing \
	mkinstalldirs

MAINTAINERCLEANFILES = Makefile.in

include $(top_srcdir)/misc/Makefile.defs
