noinst_HEADERS = \
	AbstractDbObjectSource.h \
	CommandResult.h  \
	DbObject.h \
	DbObjectManifest.h  \
	GeoCollection.h \
	GeoRegion.h \
	Makefile.am \
	SourceDiskLink.h \
	BrlcadDb.h \
	DbObjectCache.h  \
	DbObjectManager.h  \
	GED.h \
	GeometryEngine.h  \
	GeoSolid.h \
	NonGeo.h \
	SourceSvnLink.h

CLOBBER_FILES = \
	Makefile.in