SUBDIRS = \
        libGeometry \
        libNumeric \
        libImage \
        libRaytrace \
        libUtility 

lib_LTLIBRARIES = libge.la

libge_la_SOURCES = \
	AbstractDbObjectSource.cxx \
	GeometryEngine.cxx \
	DbObjectCache.cxx \
	SourceDiskLink.cxx \
	SourceSvnLink.cxx \
	DbObjectManager.cxx \
	DbObjectManifest.cxx \
	../iBME/Object.cxx \
	io/DataStream.cxx \
	io/ByteArrayInputStream.cxx \
	io/ByteArrayOutputStream.cxx \
	io/DataInputStream.cxx \
	io/DataOutputStream.cxx \
	io/FilterInputStream.cxx \
	io/FilterOutputStream.cxx \
	io/InputStream.cxx \
	io/OutputStream.cxx \
	io/PushbackInputStream.cxx \
	exception/CloneNotSupportedException.cxx \
	exception/Exception.cxx \
	exception/NullPointerException.cxx \
	exception/RuntimeException.cxx \
	exception/Throwable.cxx \
	exception/StreamEmptyException.cxx \
	exception/EOFException.cxx \
	exception/IOException.cxx
